--- a/styles/home-page.less
+++ b/styles/home-page.less
@@ -1,10 +1,17 @@
+@import "lib/colors.less";
+
 #home-page{
-  position: fixed;
+  position: absolute;
+  padding: 20px 0;
   .thumbnail{
     border: 0;
     margin-bottom: 0;
   }
   h1{
     font-size: 60px;
+  }
+  h2{
+    font-size: 18px;
+    color: @text-dark;
   }
 }
