--- a/templates/pages/home-page.html
+++ b/templates/pages/home-page.html
@@ -8,11 +8,11 @@
               <img src="/images/sale-icon.png"/>
             </div>
           </div>
-          <div class="col-sm-3 col-sm-height col-middle">
+          <div class="col-sm-4 col-sm-height col-middle">
             <h1 class="text-left">DappList</h1>
+            <h2>Mailing list for developers on Ethereum</h2>
           </div>
-          <div class="col-sm-1 col-sm-height col-middle">
-          </div>
+
           <div class="col-sm-4 col-sm-height col-middle">
             {{> signupForm}}
           </div>
