--- a/styles/home-page.less
+++ b/styles/home-page.less
@@ -1,11 +1,14 @@
 @import "lib/colors.less";
 
 #home-page{
-  position: absolute;
+  position: relative;
   padding: 20px 0;
   .thumbnail{
     border: 0;
     margin-bottom: 0;
+    img{
+      width: 300px;
+    }
   }
   h1{
     font-size: 60px;
