--- a/templates/terms-modal.html
+++ b/templates/terms-modal.html
@@ -14,7 +14,7 @@
             You agree to let us send personal one-to-one communications to you. Examples of this may include sending you mail address verification messages, and replying to queries sent from your mail address.
           </p>
           <p>
-            Ethereum Developer’s Mailing List Policies:
+            <strong>DappList Policies:</strong>
           </p>
           <p>
             We hate spam. Unless you authorize it or we're compelled by law, we won't share your mail address with anyone else, ever.
@@ -28,6 +28,15 @@
           <p>
             We'll do our best to meet all applicable privacy, spam, and other relevant rules and regulations. If you think we've failed to do that, please contact us so we can investigate and correct as required.
           </p>
+          <p>
+            DEV Berlin<br/>
+            Ethereum Dev UG<br/>
+            Waldemarstr. 37a<br/>
+            Berlin 10999<br/>
+            Germany<br/>
+            <a href="mailto:info@ethdev.com">info@ethdev.com</a><br/>
+          </p>
+          
         </div>
       </div>
     </div>
