--- a/templates/pages/home-page.html
+++ b/templates/pages/home-page.html
@@ -3,12 +3,12 @@
     <div class="container-fluid">
       <div class="row">
         <div class="row-same-height">
-          <div class="col-sm-3 col-sm-height col-middle">
+          <div class="col-sm-3 col-sm-height">
             <div class="thumbnail">
-              <img src="/images/sale-icon.png"/>
+              <img class="master-logo" src="/images/sale-icon.png"/>
             </div>
           </div>
-          <div class="col-sm-4 col-sm-height col-middle">
+          <div class="col-sm-5 col-sm-height col-middle">
             <h1 class="text-left">DappList</h1>
             <h2>Mailing list for developers on Ethereum</h2>
           </div>
