--- a/templates/pages/home-page.html
+++ b/templates/pages/home-page.html
@@ -3,10 +3,8 @@
     <div class="container-fluid">
       <div class="row">
         <div class="row-same-height">
-          <div class="col-sm-3 col-sm-height">
-            <div class="thumbnail">
-              <img class="master-logo" src="/images/sale-icon.png"/>
-            </div>
+          <div class="col-sm-3 col-sm-height col-middle thumbnail">
+            <img class="master-logo" src="/images/sale-icon.png"/>
           </div>
           <div class="col-sm-5 col-sm-height col-middle">
             <h1 class="text-left">DappList</h1>
