increased doge interval

--- a/templates/terms-modal.html
+++ b/templates/terms-modal.html
@@ -197,7 +197,7 @@
             Kemp House<br/>
             152 City Rd<br/>
             London EC1V 2NX<br/>
-            info@ethdev.com<br/>
+            <a href="mailto:info@ethdev.com">info@ethdev.com</a><br/>
           </p>
         </div>
       </div>
