added a link to dapps ethercasts

--- a/templates/pages/home-page.html
+++ b/templates/pages/home-page.html
@@ -9,6 +9,11 @@
           <div class="col-sm-5 col-sm-height col-middle">
             <h1 class="text-left">DappList</h1>
             <h2>Mailing list for developers on Ethereum</h2>
+
+            <p>
+              <span>Interested in who is building what on Ethereum? Check out the</span>
+              <a href="http://dapps.ethercasts.com/">State of DApps</a>
+            </p>
           </div>
 
           <div class="col-sm-4 col-sm-height col-middle">
